# rupsycho

./: README.md  pyproject.toml  requirements.txt
docs/: conf.py  init.rst  parsers.rst  reader.rst  run.rst
docs/_build/doctrees/: environment.pickle  experiment.doctree  index.doctree  init.doctree  models.doctree  parser.doctree  parsers.doctree  reader.doctree  run.doctree
docs/_build/html/: .buildinfo  experiment.html  genindex.html  index.html  init.html  models.html  objects.inv  parser.html  parsers.html  py-modindex.html  reader.html  run.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  rupsycho.html
docs/_build/html/_modules/rupsycho/: experiment.html  experiment_collection.html  parser.html  reader.html
docs/_build/html/_sources/: experiment.rst.txt  index.rst.txt  models.rst.txt  parser.rst.txt
examples/: Basics.ipynb  Example.ipynb  Parsers.ipynb
examples/data/: bfi_demo_config.json
src/rupsycho/: __init__.py  chains.py  experiment.py  experiment_collection.py  parser.py  prompts.py  reader.py
src/rupsycho/encoder/: README.md  Step_1_generating-training-data.ipynb
src/rupsycho/mixins/: experiment_exporting.py  experiment_processing.py  model_managing.py  persona_managing.py  prompt_managing.py
src/rupsycho/models/: __init__.py  instruction.py  model.py  parameters.py  profile.py  prompt.py  questionnaire.py
src/rupsycho/parsers/: __init__.py  cleaners.py  judges.py  parser_utils.py  validators.py
src/rupsycho/utils/: __init__.py  files.py  imports.py  plots.py
tests/: run_experiment.py  test_models.py
(+12 files in other folders)
