[tool.poetry]
name = "RUPsycho"
version = "0.1.0"
description = "RUPsycho is a Python package designed for the application of large language models (LLMs) in social science research"
authors = ["Orr Borin <orr.borin@uni-konstanz.de>", "Andreas Spitz <andreas.spitz@uni-konstanz.de>", "Julian Schelb <julian.schelb@uni-konstanz.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
pydantic = "^2.5.2"
transformers = "^4.36.2"
openai = "^1.42.0"
torch = "^2.1.2"
accelerate = "^0.25.0"
sentencepiece = "^0.1.99"
protobuf = "^4.25.1"
langchain = "^0.2.14"
langchain-core = "^0.2.33"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.22"
langchain-huggingface = "^0.0.3"
aiofiles = "^24.1.0"
ipywidgets = "^8.1.5"
pandas = "^2.2.2"
nltk = "^3.9.1"
langchain-ollama = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
